
- Added support for GravityView to be used to create inbox views. Requires the GravityView Advanced Filter Extension.
- Added updater support for beta extensions.
- Added support for configuring a step to process feeds for the following third-party add-ons:
    Gravity Forms to Pipe Drive CRM Add-On and Gravity Forms SendinBlue Add-On.
- Added the custom confirmation message to the user input step.
- Updated merge tag processing for the Assignee and User type fields to support additional user property/meta modifiers.
- Updated the gravityflow_workflow_detail_sidebar hook to include $current_step and $args as the third and fourth parameters.
- Updated the user Input button text to "Submit" instead of "Update" when the default status is hidden.
- Updated the styles of the workflow box when the sidebar is not active to remove the padding.
- Updated the activity log and reports to exclude deleted and trashed entries.
- Fixed an issue with the inbox page which would result in the no pending tasks message when an access token is used by an assignee who is a registered user but not logged in.
- Fixed an issue which prevented the value returned by the gravityflow_feedback_approval filter from being used.
- Fixed a fatal error loading the status shortcode on some sites.
- Fixed a JavaScript error on User Input steps with field conditional logic disabled.
- Fixed the bottom bulk action drop down on the status page not displaying the print modal.